Implement Countdown text. Improve UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">HomeTime</string>
+    <string name="min">min</string>
+    <string name="refresh">Refresh</string>
 </resources>
