--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">HomeTime</string>
     <string name="min">min</string>
     <string name="refresh">Refresh</string>
+    <string name="network_error">Check your internet connection</string>
+    <string name="server_error">There is a problem. Try again</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
